update swagger, added request models and edit services, repositories
