# docs/swagger.json
@@ -30,7 +30,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Music"
+                            "$ref": "#/definitions/domain.MusicToAdd"
                         }
                     }
                 ],
@@ -63,11 +63,13 @@
                 "operationId": "delete-music",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "Song Name",
                         "name": "song",
-                        "in": "path",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.MusicToDelete"
+                        }
                     }
                 ],
                 "responses": {
@@ -99,11 +101,13 @@
                 "operationId": "get-music",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "Song Name",
                         "name": "song",
-                        "in": "path",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.MusicToGet"
+                        }
                     }
                 ],
                 "responses": {
@@ -159,11 +163,13 @@
                 "operationId": "get-text-music",
                 "parameters": [
                     {
-                        "type": "string",
                         "description": "Song Name",
                         "name": "song",
-                        "in": "path",
-                        "required": true
+                        "in": "body",
+                        "required": true,
+                        "schema": {
+                            "$ref": "#/definitions/domain.MusicToGet"
+                        }
                     }
                 ],
                 "responses": {
@@ -200,7 +206,7 @@
                         "in": "body",
                         "required": true,
                         "schema": {
-                            "$ref": "#/definitions/domain.Music"
+                            "$ref": "#/definitions/domain.MusicToUpdate"
                         }
                     }
                 ],
@@ -226,6 +232,56 @@
                     "type": "string"
                 },
                 "id": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "song": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.MusicToAdd": {
+            "type": "object",
+            "properties": {
+                "group": {
+                    "type": "string"
+                },
+                "link": {
+                    "type": "string"
+                },
+                "song": {
+                    "type": "string"
+                },
+                "text": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.MusicToDelete": {
+            "type": "object",
+            "properties": {
+                "song": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.MusicToGet": {
+            "type": "object",
+            "properties": {
+                "song": {
+                    "type": "string"
+                }
+            }
+        },
+        "domain.MusicToUpdate": {
+            "type": "object",
+            "properties": {
+                "group": {
                     "type": "string"
                 },
                 "link": {
