# internal/infrastructure/interfaces.go
@@ -3,9 +3,9 @@ package infrastructure
 import "library-music/internal/domain"
 
 type IMusicRepository interface {
-	Add(music domain.Music) (int, error)
-	Delete(song string) error
-	Update(music domain.Music) error
+	Add(music domain.MusicToAdd) (int, error)
+	Delete(music domain.MusicToDelete) error
+	Update(music domain.MusicToUpdate) error
 	GetAll() ([]domain.Music, error)
-	Get(song string) (domain.Music, error)
+	Get(music domain.MusicToGet) (domain.Music, error)
 }
